--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
 
 
         <div class="RightPartDivSettiig"> 
-            <div class="TopTextMapSelector">
+            <div class="TopTextMapSelector animate__fadeIn animate__animated anim1">
                 <h1>Map Selector</h1>
                 <p>4 Map Available</p>
             </div>
 
             <div class="MapdetailAllDiv">
-                <div class="MapSelectDiv">
+                <div class="MapSelectDiv animate__fadeIn animate__animated anim2">
                     <img class="MapImage" src="./imgs/MapImage.png" alt="">
                     <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
                     <div class="MapDetail">
@@ -253,7 +253,7 @@
                     <div class="RedSelectMap"></div>
                 </div>
 
-                <div class="MapSelectDiv">
+                <div class="MapSelectDiv animate__fadeIn animate__animated anim3">
                     <img class="MapImage" src="./imgs/MapImage.png" alt="">
                     <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
                     <div class="MapDetail">
@@ -264,7 +264,7 @@
                     <div class="RedSelectMap"></div>
                 </div>
 
-                <div class="MapSelectDiv">
+                <div class="MapSelectDiv animate__fadeIn animate__animated anim4">
                     <img class="MapImage" src="./imgs/MapImage.png" alt="">
                     <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
                     <div class="MapDetail">
@@ -275,7 +275,7 @@
                     <div class="RedSelectMap"></div>
                 </div>
 
-                <div class="MapSelectDiv">
+                <div class="MapSelectDiv animate__fadeIn animate__animated anim5">
                     <img class="MapImage" src="./imgs/MapImage.png" alt="">
                     <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
                     <div class="MapDetail">
@@ -289,11 +289,13 @@
             </div>
         </div>
 
-        <div class="CreateLobbyNewDiv">
-            <div class="InsideCreateLobbyNew">
-                <div class="WhitlineTop"></div>
-                <p>Create New Lobby</p>
-                <div class="WhitlineBottom"></div>
+        <div class="animate__fadeIn animate__animated anim6">
+            <div class="CreateLobbyNewDiv ">
+                <div class="InsideCreateLobbyNew">
+                    <div class="WhitlineTop"></div>
+                    <p>Create New Lobby</p>
+                    <div class="WhitlineBottom"></div>
+                </div>
             </div>
         </div>
 
