--- a/index.html
+++ b/index.html
@@ -305,25 +305,25 @@
 
         <div class="LeftPartSettingMenu">
 
-            <div class="TopText  animate__fadeIn animate__animated anim1">
+            <div class="TopText animate__fadeIn animate__animated ">
                 <p class="FirstP">CREATE LOBBY PAGE</p>
                 <p class="SecondP">CREATE LOBBY PAGE</p>
             </div>
-            <div class="input-container">
+            <div class="input-container sdsd ">
                 <input type="text" value="CanXLobby" class="lobby-input" spellcheck="false">
                 <span>Lobby name</span>
                 <div class="LineLittWhite"></div>
                 <div class="WhitlineBottomInput"></div>
               </div>
 
-  <div class="input-container dropdown" data-name="Game Duration">
+  <div class="input-container dropdown " data-name="Game Duration">
     <p class="selected-value">5 <span class="TextSizeCreateLobby">Min</span></p>
     <span class="ChangePOTI">Game Duration</span>
     <div class="arrow"><svg width="18" height="18" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M5 7.50003L10 12.5L15 7.50003" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg></div>
     <div class="LineLittWhite"></div>
-    <div class="WhitlineBottomInput"></div>
+    <div class="WhitlineBottomInput "></div>
     <ul class="dropdown-menu">
         <li data-value='2 <span class="TextSizeCreateLobby">Min</span>'>2 Min</li>
         <li data-value='3 <span class="TextSizeCreateLobby">Min</span>'>3 Min</li>
@@ -444,8 +444,7 @@
 
     </div>
 
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
