--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/Global.css">
     <link rel="stylesheet" href="./styles/HomePage.css">
     <link rel="stylesheet" href="styles/SettingLobby.css">
+    <link rel="stylesheet" href="styles/LeaderBoardPage.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -436,13 +437,11 @@
     <div class="LineLittWhite"></div>
     <div class="WhitlineBottomInput"></div>
   </div>
-  
-
         </div>
-
-
-
     </div>
+
+
+    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="./index.js"></script>
