--- a/index.html
+++ b/index.html
@@ -463,6 +463,11 @@
             <p class="FirstP">Players Leaderboard</p>
             <p class="SecondP">Players Leaderboard</p>
         </div>
+        <div class="DDLINELEADER animate__fadeIn animate__animated anim5">
+            <div class="crescentLeaderBoard"></div>
+        </div>
+        <img class="CharchaterLeaderboard" src="./imgs/LeaderboardCharachter.png" alt="">
+
         
     </div>
 
