--- a/index.html
+++ b/index.html
@@ -463,10 +463,20 @@
             <p class="FirstP">Players Leaderboard</p>
             <p class="SecondP">Players Leaderboard</p>
         </div>
-        <div class="DDLINELEADER animate__fadeIn animate__animated anim5">
+        <div class="DDLINELEADER animate__fadeIn animate__animated anim4">
             <div class="crescentLeaderBoard"></div>
         </div>
-        <img class="CharchaterLeaderboard" src="./imgs/LeaderboardCharachter.png" alt="">
+        <img class="CharchaterLeaderboard animate__fadeIn animate__animated" src="./imgs/LeaderboardCharachter.png" alt="">
+
+
+            <div class="TopPlayersDiv">
+                <div class="TopPlayerBox">
+                    <div class="TextDetail">
+                        <div class="DetailInsideDiv"><p>Kills</p><p>2222</p></div>
+                        <div class="LineDetailInsideDiv"></div>
+                    </div>
+                </div>
+            </div>
 
         
     </div>
