Fixing dumb shit

--- a/index.html
+++ b/index.html
@@ -472,8 +472,11 @@
             <div class="TopPlayersDiv">
                 <div class="TopPlayerBox">
                     <div class="TextDetail">
-                        <div class="DetailInsideDiv"><p>Kills</p><p>2222</p></div>
+                        <div class="DetailInsideDiv"><p>Kills</p><p>5411</p></div>
                         <div class="LineDetailInsideDiv"></div>
+                        <div class="DetailInsideDiv"><p>Wins</p><p>5411</p></div>
+                        <div class="LineDetailInsideDiv"></div>
+                        <div class="DetailInsideDiv"><p>Loses</p><p>5411</p></div>
                     </div>
                 </div>
             </div>
