--- a/index.html
+++ b/index.html
@@ -471,6 +471,13 @@
 
             <div class="TopPlayersDiv">
                 <div class="TopPlayerBox">
+                    <div class="center-container">
+                        <div class="diamond-wrapper">
+                          <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                        </div>
+                      </div>
+
+
                     <div class="TextDetail">
                         <div class="DetailInsideDiv"><p>Kills</p><p>5411</p></div>
                         <div class="LineDetailInsideDiv"></div>
