--- a/index.html
+++ b/index.html
@@ -471,11 +471,13 @@
 
             <div class="TopPlayersDiv">
                 <div class="TopPlayerBox">
-                    <div class="center-container">
-                        <div class="diamond-wrapper">
-                          <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
-                        </div>
-                      </div>
+                    <div>
+                        <div class="center-container">
+                            <div class="diamond-wrapper">
+                              <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                            </div>
+                          </div>
+                    </div>
 
 
                     <div class="TextDetail">
