--- a/index.html
+++ b/index.html
@@ -471,12 +471,14 @@
 
             <div class="TopPlayersDiv">
                 <div class="TopPlayerBox">
-                    <div>
+                    <div class="SteamImageDivLeader">
+                        <img src="./imgs/SilverVecLeft.png" alt="">
                         <div class="center-container">
                             <div class="diamond-wrapper">
                               <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                             </div>
                           </div>
+                        <img src="./imgs/SilverVecRight.png" alt="">
                     </div>
 
 
