--- a/index.html
+++ b/index.html
@@ -472,13 +472,13 @@
             <div class="TopPlayersDiv">
                 <div class="TopPlayerBox">
                     <div class="SteamImageDivLeader">
-                        <img src="./imgs/SilverVecLeft.png" alt="">
+                        <img class="VectorIconLeft " src="./imgs/SilverVecLeft.png" alt="">
                         <div class="center-container">
                             <div class="diamond-wrapper">
                               <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                             </div>
-                          </div>
-                        <img src="./imgs/SilverVecRight.png" alt="">
+                        </div>
+                        <img class="VectorIconLRIght" src="./imgs/SilverVecRight.png" alt="">
                     </div>
 
 
