--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                               <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                             </div>
                         </div>
-                        <img class="VectorIconLRIght" src="./imgs/SilverVecRight.png" alt="">
+                        <img class="VectorIconRight" src="./imgs/SilverVecRight.png" alt="">
                     </div>
 
 
