Fixing some shits

--- a/index.html
+++ b/index.html
@@ -479,6 +479,12 @@
                             </div>
                         </div>
                         <img class="VectorIconRight" src="./imgs/SilverVecRight.png" alt="">
+                        <img class="BottomSteamLine" src="./imgs/BottomSteamLine.svg" alt="">
+                    </div>
+
+                    <div class="SteamUserNamePlayer">
+                        <h1>CanXRp</h1>
+                        <p>Level <span>254</span></p>
                     </div>
 
 
