--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
 
             <div class="TopPlayersDiv">
-                <div class="TopPlayerBox">
+                <div class="TopPlayerBoxSilver">
                     <div class="SteamImageDivLeader">
                         <img class="VectorIconLeft " src="./imgs/SilverVecLeft.png" alt="">
                         <div class="center-container">
@@ -481,12 +481,60 @@
                         <img class="VectorIconRight" src="./imgs/SilverVecRight.png" alt="">
                         <img class="BottomSteamLine" src="./imgs/BottomSteamLine.svg" alt="">
                     </div>
-
                     <div class="SteamUserNamePlayer">
-                        <h1>CanXRp</h1>
+                        <h1>CanX Script</h1>
                         <p>Level <span>254</span></p>
                     </div>
 
+                    <div class="TextDetail">
+                        <div class="DetailInsideDiv"><p>Kills</p><p>5411</p></div>
+                        <div class="LineDetailInsideDiv"></div>
+                        <div class="DetailInsideDiv"><p>Wins</p><p>5411</p></div>
+                        <div class="LineDetailInsideDiv"></div>
+                        <div class="DetailInsideDiv"><p>Loses</p><p>5411</p></div>
+                    </div>
+                </div>
+
+                <div class="TopPlayerBoxSilver">
+                    <div class="SteamImageDivLeader">
+                        <img class="VectorIconLeft " src="./imgs/SilverVecLeft.png" alt="">
+                        <div class="center-container">
+                            <div class="diamond-wrapper">
+                              <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                            </div>
+                        </div>
+                        <img class="VectorIconRight" src="./imgs/SilverVecRight.png" alt="">
+                        <img class="BottomSteamLine" src="./imgs/BottomSteamLine.svg" alt="">
+                    </div>
+                    <div class="SteamUserNamePlayer">
+                        <h1>CanX Script</h1>
+                        <p>Level <span>254</span></p>
+                    </div>
+
+                    <div class="TextDetail">
+                        <div class="DetailInsideDiv"><p>Kills</p><p>5411</p></div>
+                        <div class="LineDetailInsideDiv"></div>
+                        <div class="DetailInsideDiv"><p>Wins</p><p>5411</p></div>
+                        <div class="LineDetailInsideDiv"></div>
+                        <div class="DetailInsideDiv"><p>Loses</p><p>5411</p></div>
+                    </div>
+                </div>
+
+                <div class="TopPlayerBoxSilver">
+                    <div class="SteamImageDivLeader">
+                        <img class="VectorIconLeft " src="./imgs/SilverVecLeft.png" alt="">
+                        <div class="center-container">
+                            <div class="diamond-wrapper">
+                              <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                            </div>
+                        </div>
+                        <img class="VectorIconRight" src="./imgs/SilverVecRight.png" alt="">
+                        <img class="BottomSteamLine" src="./imgs/BottomSteamLine.svg" alt="">
+                    </div>
+                    <div class="SteamUserNamePlayer">
+                        <h1>CanX Script</h1>
+                        <p>Level <span>254</span></p>
+                    </div>
 
                     <div class="TextDetail">
                         <div class="DetailInsideDiv"><p>Kills</p><p>5411</p></div>
