--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                     </div>
                 </div>
 
-                <div class="TopPlayerBoxSilver">
+                <div class="TopPlayerBoxGold">
                     <div class="SteamImageDivLeader">
                         <img class="VectorIconLeft " src="./imgs/SilverVecLeft.png" alt="">
                         <div class="center-container">
@@ -520,7 +520,7 @@
                     </div>
                 </div>
 
-                <div class="TopPlayerBoxSilver">
+                <div class="TopPlayerBoxBronze">
                     <div class="SteamImageDivLeader">
                         <img class="VectorIconLeft " src="./imgs/SilverVecLeft.png" alt="">
                         <div class="center-container">
