--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
 
             <div class="TopPlayersDiv">
-                <div class="TopPlayerBoxSilver">
+                <div class="TopPlayerBoxSilver animate__fadeIn animate__animated anim1">
                     <div class="SteamImageDivLeader">
                         <img class="VectorIconLeft " src="./imgs/SilverVecLeft.png" alt="">
                         <div class="center-container">
@@ -495,32 +495,34 @@
                     </div>
                 </div>
 
-                <div class="TopPlayerBoxGold">
-                    <div class="SteamImageDivLeader">
-                        <img class="VectorIconLeft " src="./imgs/SilverVecLeft.png" alt="">
-                        <div class="center-container">
-                            <div class="diamond-wrapper">
-                              <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                <div>
+                    <div class="TopPlayerBoxGold animate__fadeIn animate__animated anim2">
+                        <div class="SteamImageDivLeader">
+                            <img class="VectorIconLeft " src="./imgs/SilverVecLeft.png" alt="">
+                            <div class="center-container">
+                                <div class="diamond-wrapper">
+                                  <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                                </div>
                             </div>
+                            <img class="VectorIconRight" src="./imgs/SilverVecRight.png" alt="">
+                            <img class="BottomSteamLine" src="./imgs/BottomSteamLine.svg" alt="">
                         </div>
-                        <img class="VectorIconRight" src="./imgs/SilverVecRight.png" alt="">
-                        <img class="BottomSteamLine" src="./imgs/BottomSteamLine.svg" alt="">
-                    </div>
-                    <div class="SteamUserNamePlayer">
-                        <h1>CanX Script</h1>
-                        <p>Level <span>254</span></p>
-                    </div>
-
-                    <div class="TextDetail">
-                        <div class="DetailInsideDiv"><p>Kills</p><p>5411</p></div>
-                        <div class="LineDetailInsideDiv"></div>
-                        <div class="DetailInsideDiv"><p>Wins</p><p>5411</p></div>
-                        <div class="LineDetailInsideDiv"></div>
-                        <div class="DetailInsideDiv"><p>Loses</p><p>5411</p></div>
+                        <div class="SteamUserNamePlayer">
+                            <h1>CanX Script</h1>
+                            <p>Level <span>254</span></p>
+                        </div>
+    
+                        <div class="TextDetail">
+                            <div class="DetailInsideDiv"><p>Kills</p><p>5411</p></div>
+                            <div class="LineDetailInsideDiv"></div>
+                            <div class="DetailInsideDiv"><p>Wins</p><p>5411</p></div>
+                            <div class="LineDetailInsideDiv"></div>
+                            <div class="DetailInsideDiv"><p>Loses</p><p>5411</p></div>
+                        </div>
                     </div>
                 </div>
 
-                <div class="TopPlayerBoxBronze">
+                <div class="TopPlayerBoxBronze animate__fadeIn animate__animated anim3">
                     <div class="SteamImageDivLeader">
                         <img class="VectorIconLeft " src="./imgs/SilverVecLeft.png" alt="">
                         <div class="center-container">
