--- a/index.html
+++ b/index.html
@@ -498,13 +498,13 @@
                 <div>
                     <div class="TopPlayerBoxGold animate__fadeIn animate__animated anim2">
                         <div class="SteamImageDivLeader">
-                            <img class="VectorIconLeft " src="./imgs/SilverVecLeft.png" alt="">
+                            <img class="VectorIconLeft GoldVecLeft" src="./imgs/GoldVecLeft.png" alt="">
                             <div class="center-container">
                                 <div class="diamond-wrapper">
                                   <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                                 </div>
                             </div>
-                            <img class="VectorIconRight" src="./imgs/SilverVecRight.png" alt="">
+                            <img class="VectorIconRight GoldVecRight" src="./imgs/GoldVecRight.png" alt="">
                             <img class="BottomSteamLine" src="./imgs/BottomSteamLine.svg" alt="">
                         </div>
                         <div class="SteamUserNamePlayer">
@@ -524,13 +524,13 @@
 
                 <div class="TopPlayerBoxBronze animate__fadeIn animate__animated anim3">
                     <div class="SteamImageDivLeader">
-                        <img class="VectorIconLeft " src="./imgs/SilverVecLeft.png" alt="">
+                        <img class="VectorIconLeft GoldVecLeft" src="./imgs/BronzeVecLeft.png" alt="">
                         <div class="center-container">
                             <div class="diamond-wrapper">
                               <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                             </div>
                         </div>
-                        <img class="VectorIconRight" src="./imgs/SilverVecRight.png" alt="">
+                        <img class="VectorIconRight GoldVecRight" src="./imgs/BonzeVecRight.png" alt="">
                         <img class="BottomSteamLine" src="./imgs/BottomSteamLine.svg" alt="">
                     </div>
                     <div class="SteamUserNamePlayer">
