--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@
         <img class="CharchaterLeaderboard animate__fadeIn animate__animated" src="./imgs/LeaderboardCharachter.png" alt="">
 
 
+        <div>
             <div class="TopPlayersDiv">
                 <div class="TopPlayerBoxSilver animate__fadeIn animate__animated anim1">
                     <div class="SteamImageDivLeader">
@@ -547,6 +548,11 @@
                     </div>
                 </div>
             </div>
+
+            <div class="PlayersListLeaderboardDiv">
+
+            </div>
+        </div>
 
         
     </div>
