--- a/index.html
+++ b/index.html
@@ -550,6 +550,11 @@
             </div>
 
             <div class="PlayersListLeaderboardDiv">
+                <div class="PlayerBoxLeaderBoard"></div>
+                <div class="PlayerBoxLeaderBoard"></div>
+                <div class="PlayerBoxLeaderBoard"></div>
+                <div class="PlayerBoxLeaderBoard"></div>
+                <div class="PlayerBoxLeaderBoard"></div>
 
             </div>
         </div>
