--- a/index.html
+++ b/index.html
@@ -550,7 +550,14 @@
             </div>
 
             <div class="PlayersListLeaderboardDiv">
-                <div class="PlayerBoxLeaderBoard"></div>
+                <div class="PlayerBoxLeaderBoard">
+                    <p class="NumberList">#<span>3</span></p>
+                        <img class="ImageListleader" src="./imgs/steamprofile.png" alt="">
+                    <div class="SteamDetailLeaderBoard">
+                        <h4>CanXRoleplay</h4>
+                        <p>Level <span>225</span></p>
+                    </div>
+                </div>
                 <div class="PlayerBoxLeaderBoard"></div>
                 <div class="PlayerBoxLeaderBoard"></div>
                 <div class="PlayerBoxLeaderBoard"></div>
