--- a/index.html
+++ b/index.html
@@ -557,6 +557,8 @@
                         <h4>CanXRoleplay</h4>
                         <p>Level <span>225</span></p>
                     </div>
+                    <div class="LosesDivBg"><p>Loses</p> <p>1000</p></div>
+                    <div class="WinsDivBg"><p>Wins</p> <p>1000</p></div>
                 </div>
                 <div class="PlayerBoxLeaderBoard"></div>
                 <div class="PlayerBoxLeaderBoard"></div>
