--- a/index.html
+++ b/index.html
@@ -559,6 +559,7 @@
                     </div>
                     <div class="LosesDivBg"><p>Loses</p> <p>1000</p></div>
                     <div class="WinsDivBg"><p>Wins</p> <p>1000</p></div>
+                    <div class="killsDivBg"><p>Kills</p> <p>10</p></div>
                 </div>
                 <div class="PlayerBoxLeaderBoard"></div>
                 <div class="PlayerBoxLeaderBoard"></div>
