Fixing some shits

--- a/index.html
+++ b/index.html
@@ -560,13 +560,88 @@
                     <div class="LosesDivBg"><p>Loses</p> <p>1000</p></div>
                     <div class="WinsDivBg"><p>Wins</p> <p>1000</p></div>
                     <div class="killsDivBg"><p>Kills</p> <p>10</p></div>
+                    <div class="BadegsDivs">
+                        <img src="./imgs/HeadShotBAdge.png" alt="">
+                        <img src="./imgs/KillerAdge.png" alt="">
+                        <img src="./imgs/WinnerBadge.png" alt="">
+                        <img src="./imgs/PlayerBadge.png" alt="">
+                    </div>
                 </div>
-                <div class="PlayerBoxLeaderBoard"></div>
-                <div class="PlayerBoxLeaderBoard"></div>
-                <div class="PlayerBoxLeaderBoard"></div>
-                <div class="PlayerBoxLeaderBoard"></div>
 
+                <div class="PlayerBoxLeaderBoard">
+                    <p class="NumberList">#<span>3</span></p>
+                        <img class="ImageListleader" src="./imgs/steamprofile.png" alt="">
+                    <div class="SteamDetailLeaderBoard">
+                        <h4>CanXRoleplay</h4>
+                        <p>Level <span>225</span></p>
+                    </div>
+                    <div class="LosesDivBg"><p>Loses</p> <p>1000</p></div>
+                    <div class="WinsDivBg"><p>Wins</p> <p>1000</p></div>
+                    <div class="killsDivBg"><p>Kills</p> <p>10</p></div>
+                    <div class="BadegsDivs">
+                        <img src="./imgs/HeadShotBAdge.png" alt="">
+                        <img src="./imgs/KillerAdge.png" alt="">
+                        <img src="./imgs/WinnerBadge.png" alt="">
+                        <img src="./imgs/PlayerBadge.png" alt="">
+                    </div>
+                </div>
+
+                <div class="PlayerBoxLeaderBoard">
+                    <p class="NumberList">#<span>3</span></p>
+                        <img class="ImageListleader" src="./imgs/steamprofile.png" alt="">
+                    <div class="SteamDetailLeaderBoard">
+                        <h4>CanXRoleplay</h4>
+                        <p>Level <span>225</span></p>
+                    </div>
+                    <div class="LosesDivBg"><p>Loses</p> <p>1000</p></div>
+                    <div class="WinsDivBg"><p>Wins</p> <p>1000</p></div>
+                    <div class="killsDivBg"><p>Kills</p> <p>10</p></div>
+                    <div class="BadegsDivs">
+                        <img src="./imgs/HeadShotBAdge.png" alt="">
+                        <img src="./imgs/KillerAdge.png" alt="">
+                        <img src="./imgs/WinnerBadge.png" alt="">
+                        <img src="./imgs/PlayerBadge.png" alt="">
+                    </div>
+                </div>
+
+                <div class="PlayerBoxLeaderBoard">
+                    <p class="NumberList">#<span>3</span></p>
+                        <img class="ImageListleader" src="./imgs/steamprofile.png" alt="">
+                    <div class="SteamDetailLeaderBoard">
+                        <h4>CanXRoleplay</h4>
+                        <p>Level <span>225</span></p>
+                    </div>
+                    <div class="LosesDivBg"><p>Loses</p> <p>1000</p></div>
+                    <div class="WinsDivBg"><p>Wins</p> <p>1000</p></div>
+                    <div class="killsDivBg"><p>Kills</p> <p>10</p></div>
+                    <div class="BadegsDivs">
+                        <img src="./imgs/HeadShotBAdge.png" alt="">
+                        <img src="./imgs/KillerAdge.png" alt="">
+                        <img src="./imgs/WinnerBadge.png" alt="">
+                        <img src="./imgs/PlayerBadge.png" alt="">
+                    </div>
+                </div>
+
+                <div class="PlayerBoxLeaderBoard">
+                    <p class="NumberList">#<span>3</span></p>
+                        <img class="ImageListleader" src="./imgs/steamprofile.png" alt="">
+                    <div class="SteamDetailLeaderBoard">
+                        <h4>CanXRoleplay</h4>
+                        <p>Level <span>225</span></p>
+                    </div>
+                    <div class="LosesDivBg"><p>Loses</p> <p>1000</p></div>
+                    <div class="WinsDivBg"><p>Wins</p> <p>1000</p></div>
+                    <div class="killsDivBg"><p>Kills</p> <p>10</p></div>
+                    <div class="BadegsDivs">
+                        <img src="./imgs/HeadShotBAdge.png" alt="">
+                        <img src="./imgs/KillerAdge.png" alt="">
+                        <img src="./imgs/WinnerBadge.png" alt="">
+                        <img src="./imgs/PlayerBadge.png" alt="">
+                    </div>
+                </div>
             </div>
+
+
         </div>
 
         
