Fixing shome shits

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                     <div class="killsDivBg"><p>Kills</p> <p>10</p></div>
                     <div class="BadegsDivs">
                         <img src="./imgs/HeadShotBAdge.png" alt="">
-                        <img src="./imgs/KillerAdge.png" alt="">
+                        <img data-modal-target="#KillerBadge" src="./imgs/KillerAdge.png" alt="">
                         <img src="./imgs/WinnerBadge.png" alt="">
                         <img src="./imgs/PlayerBadge.png" alt="">
                     </div>
@@ -644,26 +644,8 @@
     </div>
 
 
-    <div id="KillerBadge">
 
-    </div>
-
-    <div id="KillerBadge" class="modal  animate__fadeIn animate__animated">
-        <div class="modal-content2">
-            <span class="close"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.79279 6.79357C6.98031 6.6061 7.23462 6.50078 7.49979 6.50078C7.76495 6.50078 8.01926 6.6061 8.20679 6.79357L11.9998 10.5866L15.7928 6.79357C15.885 6.69806 15.9954 6.62188 16.1174 6.56947C16.2394 6.51706 16.3706 6.48947 16.5034 6.48832C16.6362 6.48717 16.7678 6.51247 16.8907 6.56275C17.0136 6.61303 17.1253 6.68728 17.2192 6.78117C17.3131 6.87507 17.3873 6.98672 17.4376 7.10962C17.4879 7.23251 17.5132 7.36419 17.512 7.49697C17.5109 7.62975 17.4833 7.76097 17.4309 7.88297C17.3785 8.00498 17.3023 8.11532 17.2068 8.20757L13.4138 12.0006L17.2068 15.7936C17.3889 15.9822 17.4897 16.2348 17.4875 16.497C17.4852 16.7592 17.38 17.01 17.1946 17.1954C17.0092 17.3808 16.7584 17.486 16.4962 17.4882C16.234 17.4905 15.9814 17.3897 15.7928 17.2076L11.9998 13.4146L8.20679 17.2076C8.01818 17.3897 7.76558 17.4905 7.50339 17.4882C7.24119 17.486 6.99038 17.3808 6.80497 17.1954C6.61956 17.01 6.51439 16.7592 6.51211 16.497C6.50983 16.2348 6.61063 15.9822 6.79279 15.7936L10.5858 12.0006L6.79279 8.20757C6.60532 8.02004 6.5 7.76573 6.5 7.50057C6.5 7.23541 6.60532 6.9811 6.79279 6.79357Z" fill="white"/>
-                </svg></span>
-                <div class="AddPlayerModalText">
-                    <h1 class="animate__fadeIn animate__animated anim1" >add player</h1>
-                    <p class="animate__fadeIn animate__animated anim2">You are able to add a specific player during a live game.</p>
-                </div>
-
-          
-        </div>
-      </div>
-
-
-      <div class="modal" id="myModal">
+      <div class="modal" id="KillerBadge">
         <div class="modal-content">
           <span class="close">&times;</span>
           <h2>Modal Title</h2>
