--- a/index.html
+++ b/index.html
@@ -648,8 +648,7 @@
       <div class="modal" id="KillerBadge">
         <div class="modal-content">
           <span class="close">&times;</span>
-          <h2>Modal Title</h2>
-          <p>This modal opens and closes smoothly with CSS transitions.</p>
+          <img src="./imgs/KillerAdge.png" alt="">
         </div>
       </div>
 
