--- a/index.html
+++ b/index.html
@@ -649,6 +649,13 @@
         <div class="modal-content">
           <span class="close">&times;</span>
           <img src="./imgs/KillerAdge.png" alt="">
+          <div class="DetailModalTexts">
+            <div class="TopTextLeaderBoardModal animate__fadeIn animate__animated ">
+                <p >100 Kills Badge</p>
+                <p >100 Kills Badge</p>
+            </div>
+            <p class="TextDescription">Players who achieve 100 total kills will be awarded this exclusive badge. It represents exceptional combat performance, precision, and persistence throughout gameplay. Earning this badge highlights your ability to maintain control, adapt to challenges, and consistently perform at a high level. It stands as a true mark of strength and skill</p>
+          </div>
         </div>
       </div>
 
