--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                         <img data-modal-target="#HeadshotBadge" src="./imgs/HeadShotBAdge.png" alt="">
                         <img data-modal-target="#KillerBadge" src="./imgs/KillerAdge.png" alt="">
                         <img data-modal-target="#WinnerBadge" src="./imgs/WinnerBadge.png" alt="">
-                        <img src="./imgs/PlayerBadge.png" alt="">
+                        <img data-modal-target="#MatchPlayedBadge" src="./imgs/PlayerBadge.png" alt="">
                     </div>
                 </div>
 
@@ -638,6 +638,22 @@
                 <p >100 Wins Badge</p>
             </div>
             <p class="TextDescription">Players who achieve 100 total wins will receive this prestigious badge. It symbolizes mastery, resilience, and consistent success across multiple battles. Earning this badge highlights your tactical decision-making, leadership, and ability to perform under pressure. It stands as a powerful mark of achievement and dedication to excellence</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal" id="MatchPlayedBadge">
+        <div class="modal-content">
+          <svg class="close" width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M8.02872 9.60248L5.31079 6.58392L2.01073 9.5553C1.64773 9.88215 1.10611 9.87791 0.807137 9.54586C0.508165 9.21382 0.560556 8.67473 0.923562 8.34787L4.22362 5.37649L1.50569 2.35792C1.20671 2.02588 1.25911 1.48679 1.62211 1.15993C1.98512 0.833083 2.52674 0.83733 2.82571 1.16937L5.54364 4.18794L8.84369 1.21656C9.2067 0.889704 9.74832 0.893951 10.0473 1.22599C10.3463 1.55804 10.2939 2.09713 9.93086 2.42398L6.63081 5.39537L9.34874 8.41393C9.64771 8.74597 9.59532 9.28507 9.23231 9.61192C8.86931 9.93877 8.32769 9.93453 8.02872 9.60248Z" fill="#D8D8D8"/>
+            </svg>
+          <img class="animate__fadeIn animate__animated anim1" src="./imgs/PlayerBadge.png" alt="">
+          <div class="DetailModalTexts animate__fadeIn animate__animated anim2">
+            <div class="TopTextLeaderBoardModal  ">
+                <p >100 Matchs Badge</p>
+                <p >100 Matchs Badge</p>
+            </div>
+            <p class="TextDescription">Players who complete 100 matches will receive this exclusive badge. It represents dedication, consistency, and valuable in game experience. Earning this badge shows your persistence and passion for continuous improvement, reflecting the time and effort you’ve invested in mastering every aspect of the game. It stands as a testament to your growth and commitment as a player</p>
           </div>
         </div>
       </div>
