--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                     <p class="NumberList">#<span>3</span></p>
                         <img class="ImageListleader" src="./imgs/steamprofile.png" alt="">
                     <div class="SteamDetailLeaderBoard">
-                        <h4>CanXRoleplay</h4>
+                        <h4 class="SteamPlayerNameSteam">CanXRoleplays</h4>
                         <p>Level <span>225</span></p>
                     </div>
                     <div class="LosesDivBg"><p>Loses</p> <p>1000</p></div>
