--- a/index.html
+++ b/index.html
@@ -569,6 +569,82 @@
                 </div>
 
 
+                <div class="PlayerBoxLeaderBoard">
+                    <p class="NumberList">#<span>4</span></p>
+                        <img class="ImageListleader" src="./imgs/steamprofile.png" alt="">
+                    <div class="SteamDetailLeaderBoard">
+                        <h4 class="SteamPlayerNameSteam">CanXRoleplays</h4>
+                        <p>Level <span>225</span></p>
+                    </div>
+                    <div class="LosesDivBg"><p>Loses</p> <p>1000</p></div>
+                    <div class="WinsDivBg"><p>Wins</p> <p>1000</p></div>
+                    <div class="killsDivBg"><p>Kills</p> <p>10</p></div>
+                    <div class="BadegsDivs">
+                        <img data-modal-target="#HeadshotBadge" src="./imgs/HeadShotBAdge.png" alt="">
+                        <img data-modal-target="#KillerBadge" src="./imgs/KillerAdge.png" alt="">
+                        <img data-modal-target="#WinnerBadge" src="./imgs/WinnerBadge.png" alt="">
+                        <img data-modal-target="#MatchPlayedBadge" src="./imgs/PlayerBadge.png" alt="">
+                    </div>
+                </div>
+
+
+                <div class="PlayerBoxLeaderBoard">
+                    <p class="NumberList">#<span>5</span></p>
+                        <img class="ImageListleader" src="./imgs/steamprofile.png" alt="">
+                    <div class="SteamDetailLeaderBoard">
+                        <h4 class="SteamPlayerNameSteam">CanXRoleplays</h4>
+                        <p>Level <span>225</span></p>
+                    </div>
+                    <div class="LosesDivBg"><p>Loses</p> <p>1000</p></div>
+                    <div class="WinsDivBg"><p>Wins</p> <p>1000</p></div>
+                    <div class="killsDivBg"><p>Kills</p> <p>10</p></div>
+                    <div class="BadegsDivs">
+                        <img data-modal-target="#HeadshotBadge" src="./imgs/HeadShotBAdge.png" alt="">
+                        <img data-modal-target="#KillerBadge" src="./imgs/KillerAdge.png" alt="">
+                        <img data-modal-target="#WinnerBadge" src="./imgs/WinnerBadge.png" alt="">
+                        <img data-modal-target="#MatchPlayedBadge" src="./imgs/PlayerBadge.png" alt="">
+                    </div>
+                </div>
+
+
+                <div class="PlayerBoxLeaderBoard">
+                    <p class="NumberList">#<span>6</span></p>
+                        <img class="ImageListleader" src="./imgs/steamprofile.png" alt="">
+                    <div class="SteamDetailLeaderBoard">
+                        <h4 class="SteamPlayerNameSteam">CanXRoleplays</h4>
+                        <p>Level <span>225</span></p>
+                    </div>
+                    <div class="LosesDivBg"><p>Loses</p> <p>1000</p></div>
+                    <div class="WinsDivBg"><p>Wins</p> <p>1000</p></div>
+                    <div class="killsDivBg"><p>Kills</p> <p>10</p></div>
+                    <div class="BadegsDivs">
+                        <img data-modal-target="#HeadshotBadge" src="./imgs/HeadShotBAdge.png" alt="">
+                        <img data-modal-target="#KillerBadge" src="./imgs/KillerAdge.png" alt="">
+                        <img data-modal-target="#WinnerBadge" src="./imgs/WinnerBadge.png" alt="">
+                        <img data-modal-target="#MatchPlayedBadge" src="./imgs/PlayerBadge.png" alt="">
+                    </div>
+                </div>
+
+
+                <div class="PlayerBoxLeaderBoard">
+                    <p class="NumberList">#<span>7</span></p>
+                        <img class="ImageListleader" src="./imgs/steamprofile.png" alt="">
+                    <div class="SteamDetailLeaderBoard">
+                        <h4 class="SteamPlayerNameSteam">CanXRoleplays</h4>
+                        <p>Level <span>225</span></p>
+                    </div>
+                    <div class="LosesDivBg"><p>Loses</p> <p>1000</p></div>
+                    <div class="WinsDivBg"><p>Wins</p> <p>1000</p></div>
+                    <div class="killsDivBg"><p>Kills</p> <p>10</p></div>
+                    <div class="BadegsDivs">
+                        <img data-modal-target="#HeadshotBadge" src="./imgs/HeadShotBAdge.png" alt="">
+                        <img data-modal-target="#KillerBadge" src="./imgs/KillerAdge.png" alt="">
+                        <img data-modal-target="#WinnerBadge" src="./imgs/WinnerBadge.png" alt="">
+                        <img data-modal-target="#MatchPlayedBadge" src="./imgs/PlayerBadge.png" alt="">
+                    </div>
+                </div>
+
+
 
 
             </div>
