--- a/index.html
+++ b/index.html
@@ -604,6 +604,8 @@
                         <img data-modal-target="#WinnerBadge" src="./imgs/WinnerBadge.png" alt="">
                         <img data-modal-target="#MatchPlayedBadge" src="./imgs/PlayerBadge.png" alt="">
                     </div>
+
+
                 </div>
 
 
@@ -623,6 +625,8 @@
                         <img data-modal-target="#WinnerBadge" src="./imgs/WinnerBadge.png" alt="">
                         <img data-modal-target="#MatchPlayedBadge" src="./imgs/PlayerBadge.png" alt="">
                     </div>
+
+                    <div class="PlayerSelfDiv"></div>
                 </div>
 
 
