Fixing scroll Issue

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                 </div>
             </div>
 
-            <div class="PlayersListLeaderboardDiv">
+            <div class="PlayersListLeaderboardDiv custom-scrollbar" >
                 <div class="PlayerBoxLeaderBoard">
                     <p class="NumberList">#<span>3</span></p>
                         <img class="ImageListleader" src="./imgs/steamprofile.png" alt="">
@@ -647,6 +647,8 @@
                         <img data-modal-target="#MatchPlayedBadge" src="./imgs/PlayerBadge.png" alt="">
                     </div>
                 </div>
+
+                
 
 
 
