Fixing scroll bar

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <p>4 Map Available</p>
             </div>
 
-            <div class="MapdetailAllDiv">
+            <div class="MapdetailAllDiv custom-scrollbar">
                 <div class="MapSelectDiv animate__fadeIn animate__animated anim2">
                     <img class="MapImage" src="./imgs/MapImage.png" alt="">
                     <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
@@ -254,6 +254,8 @@
                     <div class="RedSelectMap"></div>
                 </div>
 
+                
+
                 <div class="MapSelectDiv animate__fadeIn animate__animated anim3">
                     <img class="MapImage" src="./imgs/MapImage.png" alt="">
                     <img class="UpperMapImage" src="./imgs/UpparMapImage.svg" alt="">
@@ -264,6 +266,7 @@
                     <div class="GreenSelectMap"></div>
                     <div class="RedSelectMap"></div>
                 </div>
+
 
                 <div class="MapSelectDiv animate__fadeIn animate__animated anim4">
                     <img class="MapImage" src="./imgs/MapImage.png" alt="">
@@ -567,6 +570,7 @@
                         <img data-modal-target="#MatchPlayedBadge" src="./imgs/PlayerBadge.png" alt="">
                     </div>
                 </div>
+                
 
 
                 <div class="PlayerBoxLeaderBoard">
