--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/HomePage.css">
     <link rel="stylesheet" href="styles/SettingLobby.css">
     <link rel="stylesheet" href="styles/LeaderBoardPage.css">
+    <link rel="stylesheet" href="./styles/LobbyPage.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
@@ -111,7 +112,7 @@
                         </div>
                 
                     </div>
-                        <div class="JoinLobby animate__animated animate__fadeIn anim1">
+                        <div class="JoinLobby animate__animated animate__fadeIn anim1"  onclick="pageHandler('LobbysPage')">
                             <img src="./imgs/JoinLobbyImage.png" alt="" class="bg-image">
                             <div class="JoinLobyText">
                                 <h1>Join Lobby</h1>
@@ -732,6 +733,43 @@
             <p class="TextDescription">Players who complete 100 matches will receive this exclusive badge. It represents dedication, consistency, and valuable in game experience. Earning this badge shows your persistence and passion for continuous improvement, reflecting the time and effort you’ve invested in mastering every aspect of the game. It stands as a testament to your growth and commitment as a player</p>
           </div>
         </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+      <div id="LobbysPage" class="LobbypageDiv" >
+        <div class="closeMenu  animate__fadeIn animate__animated " onclick="pageHandler('homepage')">
+            <button class="button">
+                 <div class="button-box">
+                   <span class="button-elem">
+                     <svg  viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                         <path d="M13.4119 12.0002L17.7119 7.71019C17.9002 7.52188 18.006 7.26649 18.006 7.00019C18.006 6.73388 17.9002 6.47849 17.7119 6.29019C17.5236 6.10188 17.2682 5.99609 17.0019 5.99609C16.7356 5.99609 16.4802 6.10188 16.2919 6.29019L12.0019 10.5902L7.71189 6.29019C7.52359 6.10188 7.26819 5.99609 7.00189 5.99609C6.73559 5.99609 6.4802 6.10188 6.29189 6.29019C6.10359 6.47849 5.9978 6.73388 5.9978 7.00019C5.9978 7.26649 6.10359 7.52188 6.29189 7.71019L10.5919 12.0002L6.29189 16.2902C6.19816 16.3831 6.12377 16.4937 6.073 16.6156C6.02223 16.7375 5.99609 16.8682 5.99609 17.0002C5.99609 17.1322 6.02223 17.2629 6.073 17.3848C6.12377 17.5066 6.19816 17.6172 6.29189 17.7102C6.38486 17.8039 6.49546 17.8783 6.61732 17.9291C6.73917 17.9798 6.86988 18.006 7.00189 18.006C7.1339 18.006 7.26461 17.9798 7.38647 17.9291C7.50833 17.8783 7.61893 17.8039 7.71189 17.7102L12.0019 13.4102L16.2919 17.7102C16.3849 17.8039 16.4955 17.8783 16.6173 17.9291C16.7392 17.9798 16.8699 18.006 17.0019 18.006C17.1339 18.006 17.2646 17.9798 17.3865 17.9291C17.5083 17.8783 17.6189 17.8039 17.7119 17.7102C17.8056 17.6172 17.88 17.5066 17.9308 17.3848C17.9816 17.2629 18.0077 17.1322 18.0077 17.0002C18.0077 16.8682 17.9816 16.7375 17.9308 16.6156C17.88 16.4937 17.8056 16.3831 17.7119 16.2902L13.4119 12.0002Z" fill="#f0eeef94"/>
+                         </svg>
+                   </span>
+                   <span class="button-elem">
+                     <svg  viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                         <path d="M13.4119 12.0002L17.7119 7.71019C17.9002 7.52188 18.006 7.26649 18.006 7.00019C18.006 6.73388 17.9002 6.47849 17.7119 6.29019C17.5236 6.10188 17.2682 5.99609 17.0019 5.99609C16.7356 5.99609 16.4802 6.10188 16.2919 6.29019L12.0019 10.5902L7.71189 6.29019C7.52359 6.10188 7.26819 5.99609 7.00189 5.99609C6.73559 5.99609 6.4802 6.10188 6.29189 6.29019C6.10359 6.47849 5.9978 6.73388 5.9978 7.00019C5.9978 7.26649 6.10359 7.52188 6.29189 7.71019L10.5919 12.0002L6.29189 16.2902C6.19816 16.3831 6.12377 16.4937 6.073 16.6156C6.02223 16.7375 5.99609 16.8682 5.99609 17.0002C5.99609 17.1322 6.02223 17.2629 6.073 17.3848C6.12377 17.5066 6.19816 17.6172 6.29189 17.7102C6.38486 17.8039 6.49546 17.8783 6.61732 17.9291C6.73917 17.9798 6.86988 18.006 7.00189 18.006C7.1339 18.006 7.26461 17.9798 7.38647 17.9291C7.50833 17.8783 7.61893 17.8039 7.71189 17.7102L12.0019 13.4102L16.2919 17.7102C16.3849 17.8039 16.4955 17.8783 16.6173 17.9291C16.7392 17.9798 16.8699 18.006 17.0019 18.006C17.1339 18.006 17.2646 17.9798 17.3865 17.9291C17.5083 17.8783 17.6189 17.8039 17.7119 17.7102C17.8056 17.6172 17.88 17.5066 17.9308 17.3848C17.9816 17.2629 18.0077 17.1322 18.0077 17.0002C18.0077 16.8682 17.9816 16.7375 17.9308 16.6156C17.88 16.4937 17.8056 16.3831 17.7119 16.2902L13.4119 12.0002Z" fill="#af0404"/>
+                         </svg>
+                   </span>
+                 </div>
+            </button>
+        </div>
+
+        <div class="TopTextLeaderBoard animate__fadeIn animate__animated ">
+            <p class="FirstP">Players Leaderboard</p>
+            <p class="SecondP">Players Leaderboard</p>
+        </div>
+        <div class="DDLINELEADER animate__fadeIn animate__animated anim4">
+            <div class="crescentLeaderBoard"></div>
+        </div>
+        <img class="CharchaterLeaderboard animate__fadeIn animate__animated" src="./imgs/LeaderboardCharachter.png" alt="">
       </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
