--- a/index.html
+++ b/index.html
@@ -763,13 +763,13 @@
         </div>
 
         <div class="TopTextLeaderBoard animate__fadeIn animate__animated ">
-            <p class="FirstP">Players Leaderboard</p>
-            <p class="SecondP">Players Leaderboard</p>
+            <p class="FirstP">Join Lobby pages</p>
+            <p class="SecondP">Join Lobby pages</p>
         </div>
         <div class="DDLINELEADER animate__fadeIn animate__animated anim4">
             <div class="crescentLeaderBoard"></div>
         </div>
-        <img class="CharchaterLeaderboard animate__fadeIn animate__animated" src="./imgs/LeaderboardCharachter.png" alt="">
+        <img class="CharchaterLeaderboard animate__fadeIn animate__animated" src="./imgs/RoomsCharachterPage.png" alt="">
       </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
