--- a/index.html
+++ b/index.html
@@ -770,6 +770,15 @@
             <div class="crescentLeaderBoard"></div>
         </div>
         <img class="CharchaterLeaderboard animate__fadeIn animate__animated" src="./imgs/RoomsCharachterPage.png" alt="">
+
+
+        <div class="RoomsDivsSection">
+
+            <div class="RoomBoxDiv">
+
+            </div>
+
+        </div>
       </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
