--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
         <div class="RoomsDivsSection">
 
             <div class="RoomBoxDiv">
-
+                <img src="./imgs/LobbyMapImage.png" alt="">
             </div>
 
         </div>
