--- a/index.html
+++ b/index.html
@@ -775,7 +775,19 @@
         <div class="RoomsDivsSection">
 
             <div class="RoomBoxDiv">
-                <img src="./imgs/LobbyMapImage.png" alt="">
+                <img class="LobbyImageTag" src="./imgs/LobbyMapImage.png" alt="">
+                <div>ss</div>
+            </div>
+
+            <div class="RoomBoxDiv">
+            </div>
+
+            
+            <div class="RoomBoxDiv">
+            </div>
+
+            
+            <div class="RoomBoxDiv">
             </div>
 
         </div>
