--- a/index.html
+++ b/index.html
@@ -776,7 +776,13 @@
 
             <div class="RoomBoxDiv">
                 <img class="LobbyImageTag" src="./imgs/LobbyMapImage.png" alt="">
-                <div>ss</div>
+                <div class="CreatorRoomText">
+                    <p class="CreatorPtag">Creator</p>
+                    <div>
+                        <p class="UsenameCreatorP">Canx Player</p>
+                        <!-- <p>CanxPlayer</p> -->
+                    </div>
+                </div>
             </div>
 
             <div class="RoomBoxDiv">
