--- a/index.html
+++ b/index.html
@@ -788,6 +788,11 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="BeTMoneyText">
+                    <p class="CreatorPtag">Bet money for entry</p>
+                    <p class="UsenameCreatorP">Canx Player</p>
+                </div>
             </div>
 
             <div class="RoomBoxDiv">
