--- a/index.html
+++ b/index.html
@@ -791,7 +791,17 @@
 
                 <div class="BeTMoneyText">
                     <p class="CreatorPtag">Bet money for entry</p>
-                    <p class="UsenameCreatorP">Canx Player</p>
+                    <p class="UsenameCreatorP">2000<span>$</span></p>
+                </div>
+
+                <div class="RoundsText">
+                    <p class="CreatorPtag">Rounds</p>
+                    <p class="UsenameCreatorP"><span>5</span> Rounds</p>
+                </div>
+
+                <div class="RoundsText">
+                    <p class="CreatorPtag">Rounds</p>
+                    <p class="UsenameCreatorP"><span>5</span> Rounds</p>
                 </div>
             </div>
 
