--- a/index.html
+++ b/index.html
@@ -799,9 +799,9 @@
                     <p class="UsenameCreatorP"><span>5</span> Rounds</p>
                 </div>
 
-                <div class="RoundsText">
-                    <p class="CreatorPtag">Rounds</p>
-                    <p class="UsenameCreatorP"><span>5</span> Rounds</p>
+                <div class="CurrentCreatorPtag">
+                    <p class="CreatorPtag">Current Rounds </p>
+                    <p class="UsenameCreatorP">3/5</p>
                 </div>
             </div>
 
