--- a/index.html
+++ b/index.html
@@ -803,6 +803,11 @@
                     <p class="CreatorPtag">Current Rounds </p>
                     <p class="UsenameCreatorP">3/5</p>
                 </div>
+
+                <div class="MapSelectPtag">
+                    <p class="CreatorPtag">Map</p>
+                    <p class="UsenameCreatorP">TownHall</p>
+                </div>
             </div>
 
             <div class="RoomBoxDiv">
