--- a/index.html
+++ b/index.html
@@ -808,6 +808,13 @@
                     <p class="CreatorPtag">Map</p>
                     <p class="UsenameCreatorP">TownHall</p>
                 </div>
+
+                <div class="JoinLobbyButton">
+                    <div class="RedButton">
+
+                    </div>
+
+                </div>
             </div>
 
             <div class="RoomBoxDiv">
