--- a/index.html
+++ b/index.html
@@ -811,6 +811,10 @@
 
                 <div class="JoinLobbyButton">
                     <div class="RedButton">
+                        <div class="InsideRedButton">
+                            <div class="LineTopJoin"></div>
+
+                        </div>
 
                     </div>
 
