Finish red Button

--- a/index.html
+++ b/index.html
@@ -813,9 +813,9 @@
                     <div class="RedButton">
                         <div class="InsideRedButton">
                             <div class="LineTopJoin"></div>
-
+                            <p>Join Lobby</p>
+                            <div class="LineBottomJoin"></div>
                         </div>
-
                     </div>
 
                 </div>
